Bug 186910 - KCM errors for starting Strigi service are unhelpful
Summary: KCM errors for starting Strigi service are unhelpful
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-12 00:15 UTC by Matt Williams
Modified: 2009-05-22 17:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Williams 2009-03-12 00:15:40 UTC
Version:            (using Devel)
Installed from:    Compiled sources

In the 'Desktop Search' KCM I've enabled Nepomuk (with the checkbox) and clicked apply. Then, when I click the Strigi box then click apply, an error message ("Strigi service failed to initialize, most likely due to an installation problem.") briefly flashes up in place of the previous "Strigi service not running" before the text return to saying "Strigi service not running".

There is no way to have time to read this error message (I had to find it in the source code to paste it here) and most strangely, the checkbox stays checked so a user could think that the strigi service should be running.

I am assuming that checking this box is running '/usr/bin/nepomukservicestub nepomukstrigiservice' which is erroring> However, it would be more useful if the KCM printed some log of the messages from nepomukservicestub.
Comment 1 Marcus Harrison 2009-04-02 22:13:48 UTC
I agree: I had to manually run the above command to figure out what was actually wrong. The error message was simply too quick to disappear.
Maybe the error message should stay there until the user applies some new settings to that particular section, namely un-ticking the box...?
Comment 2 Sebastian Trueg 2009-04-28 15:20:51 UTC
SVN commit 960397 by trueg:

Try harder to keep the correct state in case of an error.

BUG: 186910


 M  +10 -5     nepomukserverkcm.cpp  
 M  +2 -0      nepomukserverkcm.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=960397
Comment 3 Dario Andres 2009-05-22 17:21:22 UTC
*** Bug 193541 has been marked as a duplicate of this bug. ***