Try harder to keep the correct state in case of an error.

BUG: 186910

svn path=/trunk/KDE/kdebase/runtime/; revision=960397